PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-117_division_invalide1/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:13: error: expected ‘;’ before ‘}’ token
    3 |     return 2//1;
      |             ^
      |             ;
    4 | }
      | ~            

return code: 1
